--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100vh;
@@ -12,6 +13,36 @@ body {
     display: flex;
 }
 
+#piano-container {
+    width: 80%;
+    height: 80%;
+    position: relative;
+}
+
+#lesson, #progress {
+    margin-top: 20px;
+    text-align: center;
+    cursor: pointer;
+}
+
+#lesson-list, #progress-details {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.lesson-item {
+    margin: 5px;
+    padding: 10px;
+    border: 1px solid #000;
+    cursor: pointer;
+}
+
+.progress-item {
+    margin: 5px;
+    padding: 10px;
+    border: 1px solid #000;
+}
 .key {
     width: 50px;
     height: 200px;
